--- a/whatsapp/package.json
+++ b/whatsapp/package.json
@@ -13,12 +13,15 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
+    "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
     "firebase": "^9.12.1",
+    "lodash": "^4.17.21",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.0.3"
+    "react-firebase-hooks": "^5.0.3",
+    "react-spinkit": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
